--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1,5 +1,12 @@
 ﻿l_english:
  #NEW IDEOLOGIES AND PARTIES
+ FIN_neutrality_party:1 "Mikaliitto"
+ FIN_democratic_party:0 "JDP"
+ FIN_democratic_party_long:0 "Jatkosotan Demokraattinen Puolue"
+ FIN_fascism_party:0 "MIK"
+ FIN_fascism_party_long:0 "Mikkon Ihmisten Kansanliike"
+ FIN_communism_party:0 "JKP"
+ FIN_communism_party_long:0 "Jatkosotan Kommunistinen Puolue"
  FRA_communism_party:0 "Partie d'Examen"
  FRA_democratic_party:0 "Parti Escalator de Marie"
  FRA_fascism_party:0 "Parti Escalator"
@@ -131,13 +138,6 @@
  centrism_desc:1 "Centrism is a form of government which wants to achieve common sense solutions that appropriately address current and future needs, that support the public trust and serve the common good with consideration of risk and capacity in context of these needs."
  anarchism:0 "Anarchism"
  anarchism_desc:0 "Anarchism is the rejection of authority itself, promoting the division of society into self-managing and self-governing collectives instead of a singular, centralized state."
- GER_fascism_party:0 "NSDAP"
- GER_fascism_party_long:0 "Nationalsozialistische Deutsche Arbeiterpartei"
- GER_communism_party:0 "KPD"
- GER_democratic_party:1 "Zentrum"
- GER_neutrality_party_civil_war:0 "Militärregierung"
- GER_neutrality_party_kaiserreich:0 "DNVP"
- GER_neutrality_party_kaiserreich_long:0 "Deutschnationale Volkspartei"
  POL_fascism_party:0 "ONR-Falanga"
  POL_fascism_party_long:0 "Oboz Narodowo Radykalny-Falanga"
  POL_natdem_party:0 "ND"
@@ -153,52 +153,12 @@
  POL_POS_party_long:0 "Powszechna Organizacja Społeczeństwa" #Common Organization of Society
  POL_exile_democratic_party:0 "PLD"
  POL_exile_democratic_party_long:0 "Partia Liberalno-Demokratyczna"
- ENG_communism_party:0 "CPGB"
- ENG_democratic_party:0 "Conservative Party"
- ENG_fascism_party:0 "British Union of Fascists"
- ENG_neutrality_party_kings_party:0 "King's Party"
- ENG_neutrality_party_kings_party_long:0 "The King's Party"
- ENG_neutrality_party_queens_party:0 "Queen's Party"
- ENG_neutrality_party_queens_party_long:0 "The Queen's Party"
- ITA_communism_party:1 "PCI"
- ITA_communism_party_long:0 "Partito Comunista Italiano"
- ITA_democratic_party:1 "PPI"
- ITA_democratic_party_long:0 "Partito Popolare Italiano"
- ITA_fascism_party:1 "PNF"
- ITA_fascism_party_long:0 "Partito Nazionale Fascista"
- ITA_neutrality_party:1 "PNM"
- ITA_neutrality_party_long:0 "Partito Nazionale Monarchico"
  ITA_partito_socialista_italiano:0 "PSI"
  ITA_partito_socialista_italiano_long:0 "Partito Socialista Italiano"
  ITA_partito_democratico_del_lavoro:0 "PDL"
  ITA_partito_democratico_del_lavoro_long:0 "Partito Democratico del Lavoro"
  ITA_democrazia_cristiana:0 "DC"
  ITA_democrazia_cristiana_long:0 "Democrazia Cristiana"
- JAP_communism_party:0 "Nihon Kyosan-to"
- JAP_democratic_party:0 "Rikken Minseito"
- JAP_fascism_party:0 "Taisei Yokusankai"
- JAP_neutrality_party_kodoha_long:0 "Kodoha Faction"
- JAP_neutrality_party_kodoha:0 "Kodoha Faction"
- USA_communism_party:0 "Communist Party USA"
- USA_democratic_party:0 "Democratic Party"
- USA_republican_party:0 "Republican Party"
- USA_fascism_party:0 "Silver Legion of America"
- FRA_communism_party:0 "Parti Communiste Francais"
- FRA_democratic_party:0 "Parti Radical"
- FRA_fascism_party:0 "Mouvement Franciste"
- SOV_communism_party:0 "All-Union Communist Party"
- SOV_communism_party_russian:0 "VKP(B)"
- SOV_communism_party_russian_long:0 "Vsesoyuznaya Kommunisticheskaya Partiya (Bolshevikov)"
- SOV_democratic_party:0 "Trudoviks"
- SOV_fascism_party:0 "RFP"
- SOV_fascism_party_russian:0 "VFP"
- SOV_fascism_party_russian_long:0 "Vserossyskaya Fashistskaya Partiya"
- AUS_communism_party:0 "KPÖ"
- AUS_communism_party_long:0 "Kommunistische Partei Österreichs"
- AUS_democratic_party:0 "SDAPÖ"
- AUS_democratic_party_long:0 "Sozialdemokratische Partei Österreichs"
- AUS_fascism_party:1 "DNSAP"
- AUS_neutrality_party:1 "Vaterländische Front"
  AUS_communism_party:0 "Miho"
  AUS_communism_party_long:0 "Commander Miho"
  AUS_democratic_party:0 "Miho"
@@ -289,14 +249,7 @@
  SWE_democratic_party_long:0 "Sveriges socialdemokratiska arbetareparti"
  SWE_neutrality_party:0 "Bondeförbundet"
  SWE_neutrality_party_long:0 "Bondeförbundet"
- FIN_neutrality_party:1 "ML"
- FIN_neutrality_party_long:1 "Maalaisliitto"
- FIN_democratic_party:0 "SDP"
- FIN_democratic_party_long:0 "Suomen Sosialidemokraattinen Puolue"
- FIN_fascism_party:0 "IKL"
- FIN_fascism_party_long:0 "Isänmaallinen Kansanliike"
- FIN_communism_party:0 "SKP"
- FIN_communism_party_long:0 "Suomen Kommunistinen Puolue"
+
  DEN_democratic_party:0 "Socialdemokratiet"
  DEN_democratic_party_long:0 "Socialdemokratiet"
  DEN_fascism_party:0 "DNSAP"
