--- a/localisation/english/wtt_focus_l_english.yml
+++ b/localisation/english/wtt_focus_l_english.yml
@@ -443,7 +443,7 @@
  JAP_join_comintern_desc:0 "We cannot stand alone against the world. We must stand together with the birthplace of communism to protect the revolution!"
  JAP_red_brigades:0 "Red Brigades"
  JAP_red_brigades_desc:0 "Every man and woman most do their duty to protect the state. We will ensure they have the opportunity to do so."
- JAP_communist_volunteers:0 "Tamada Volunteers"
+ JAP_communist_volunteers:0 "Nonna Volunteers"
  JAP_communist_volunteers_desc:0 "Our struggle does not end here. We must see to lift up other nations, as well. Our best and brightest shall be sent forth to champion our cause in those nations that have embraced the revolution!"
  JAP_asian_communist_solidarity:0 "Asian Hosomist Solidarity"
  JAP_asian_communist_solidarity_tt:0 "Invite §H[WTT_communist_china.GetNameWithFlag]§! to our faction."
