--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -837,6 +837,19 @@
  ### CHIHATAN PACK ###
 
  ##JAPANESE, MENGKUKUO, MANCHURIAN FOCUSES
+ JAP_indian_liberation_army:0 "Gloriana RAJ Liberation Army"
+ JAP_indian_liberation_army_desc:0 "We must mobilize Indian nationalists to ensure that they can expel foreigners from India."
+ JAP_stimulate_mongol_traditions:0 "Stimulate the Mongol Traditions"
+ JAP_stimulate_mongol_traditions_desc:0 "The Mongols have suffered from decades of communist rulers who have attacked their Buddhist traditions. Restoring the temples and respecting them will give us the gratitude of the population."
+ JAP_expand_the_alliance:0 "Expand the Alliance"
+ JAP_expand_the_alliance_desc:0 "Being proper protectors of democratic values, we shall seek an alliance of those who support our cause in the region!"
+ JAP_trans_pacific_alliance:0 "Trans-Pacific Friendship"
+ JAP_trans_pacific_alliance_desc:0 "Tensions between Chihatan and the Saunders have been high during recent times. But with our new government and way of life, it is now only natural that we ally ourselves with them so our two nations can form a worthy front to defend the democratic world."
+ JAP_finance_the_naval_arsenals:0 "Finance the Naval Arsenals"
+ JAP_finance_the_naval_arsenals_desc:0 "We need a bigger navy to guarantee the security of the Pacific Ocean."
+ JAP_crush_chinese_communists:0 "Crush the Chinese Communists"
+ JAP_crush_chinese_communists_desc:0 "The illegitimate communist rulers of China are a massive threat to both East Asia and the world itself; we must crush them before they can do any damage."
+ JAP_reignite_the_chinese_civil_war_desc:0 "For too long, the nationalists and other reactionary forces have stood in the way of the Chinese people's liberation!"   
  JAP_reignite_the_chinese_civil_war:0 "Reignite the Chinese Civil War"
  JAP_reignite_the_chinese_civil_war_desc:0 "For too long, the nationalists and other reactionary forces have stood in the way of the Chinese people's liberation!"   
  JAP_strike_the_old_oppressors:0 "Strike the Old Oppressors"
@@ -1179,7 +1192,8 @@
  cht_continental_military_desc: "We are a small subsection of the academy, so we must therefore keep our best in defending it!"
  undying_will: "Fushi no Ishi"
  undying_will_desc: "§RThis academy will stand to its last breath biting tooth and nail to keep invaders out no matter what cost to the limits of human capabilities.§!"
- 
+ cht_imperialist: "Smash the Imperialist"
+
  ##CHIHATAN ADVISORS
  JAP_ikuyo_fukuda: "Haru Fukuda"
  JAP_ikuyo_fukuda_desc: "An advocate for the Nanshin-ron Doctrine. Ever since a meeting with the Ooarai sports detachment, a thought on reform on the tactics of the academy has come to question. Her efforts are starting to be recognized but will this be turned down back to the days of olden doctrine?"
