--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -837,7 +837,8 @@
  ### CHIHATAN PACK ###
 
  ##JAPANESE, MENGKUKUO, MANCHURIAN FOCUSES
- JAP_indian_liberation_army:0 "Gloriana RAJ Liberation Army"
+ JAP_preemptive_strike_soviet:0 "Pre-emptive strike"
+ JAP_indian_liberation_army:0 "Gloriana Liberation Army"
  JAP_indian_liberation_army_desc:0 "We must mobilize Indian nationalists to ensure that they can expel foreigners from India."
  JAP_stimulate_mongol_traditions:0 "Stimulate the Mongol Traditions"
  JAP_stimulate_mongol_traditions_desc:0 "The Mongols have suffered from decades of communist rulers who have attacked their Buddhist traditions. Restoring the temples and respecting them will give us the gratitude of the population."
