--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -805,30 +805,15 @@
  IRQ_ADJ:0 "Iraqi"
  IRQ_subject:0 "$OVERLORDADJ$ $IRQ$"
  IRQ_subject_DEF:0 "$OVERLORDADJ$ $IRQ$"
- JAP_fascism:0 "Japan"
- JAP_fascism_DEF:0 "Japan"
- JAP_democratic:0 "State of Japan"
- JAP_democratic_DEF:0 "the State of Japan"
- JAP_neutrality:0 "Japanese Shogunate"
- JAP_neutrality_DEF:0 "the Japanese Shogunate"
- JAP_communism:0 "Japanese People's Republic"
- JAP_communism_DEF:0 "the Japanese People's Republic"
- JAP_fascism_ADJ:0 "Japanese"
- JAP_democratic_ADJ:0 "Japanese"
- JAP_neutrality_ADJ:0 "Japanese"
- JAP_communism_ADJ:0 "Japanese"
- JAP:0 "Japan"
- JAP_DEF:0 "Japan"
- JAP_ADJ:0 "Japanese"
  JAP_subject:0 "$OVERLORDADJ$ $JAP$"
  JAP_subject_DEF:0 "$OVERLORDADJ$ $JAP$"
  JAP_fascism:0 "Chi-Ha-Tan"
  JAP_fascism_DEF:0 "Chi-Ha-Tan"
- JAP_democratic:0 "Chi-Ha-Tan"
- JAP_democratic_DEF:0 "Chi-Ha-Tan"
- JAP_neutrality:0 "Chi-Ha-Tan"
- JAP_neutrality_DEF:0 "Chi-Ha-Tan"
- JAP_communism:0 "Chi-Ha-Tan"
+ JAP_democratic:0 "State of Chi-Ha-Tan"
+ JAP_democratic_DEF:0 "the State of Chi-Ha-Tan"
+ JAP_neutrality:0 "Chi-Ha-Tan Shogunate"
+ JAP_neutrality_DEF:0 "the Chi-Ha-Tan Shogunate"
+ JAP_communism:0 "the Chi-Ha-Tan People's Republic"
  JAP_communism_DEF:0 "Chi-Ha-Tan"
  JAP_fascism_ADJ:0 "Chi-Ha-Tan"
  JAP_democratic_ADJ:0 "Chi-Ha-Tan"
