--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -837,6 +837,7 @@
  ### CHIHATAN PACK ###
 
  ##JAPANESE, MENGKUKUO, MANCHURIAN FOCUSES
+ JAP_trans_pacific_friendship:0 "Trans-Pacific Friendship"
  JAP_preemptive_strike_soviet:0 "Pre-emptive strike"
  JAP_indian_liberation_army:0 "Gloriana Liberation Army"
  JAP_indian_liberation_army_desc:0 "We must mobilize Indian nationalists to ensure that they can expel foreigners from India."
