--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1198,6 +1198,7 @@
  cht_imperialist: "Smash the Imperialist"
  cht_unthinkable_option: "Unthinkable Option"
  cht_strengthen_government: "Strengthen Civilian Government"
+ cht_supported_fukuda: "Supported Fukuda"
  cht_hosomi_path: "Has chosen Hosomi"
  cht_hamada_path: "Has chosen Hamada"
  JAP_invite_malaysia:0 "Invite Malaysia"
