Added More Descriptions to Focuses

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1369,7 +1369,7 @@
  FIN_protect_sea_borders:0 "Protect Sea Borders"
  FIN_protect_sea_borders_desc:0 ""
  FIN_remilitarise_alands:0 "Remilitarize Aland Islands"
- FIN_remilitarise_alands_desc:0 ""
+ FIN_remilitarise_alands_desc:0 "Our expansion requires a new operations base in the Baltic sea. We shall use the Aland island for this."
  FIN_protect_alands:0 "Protect Aland Islands"
  FIN_protect_alands_desc:0 ""
  FIN_soviet_protection:0 "Pact With the Pravda"
@@ -1396,7 +1396,7 @@
  FIN_strengten_regime:0 "Strengthen the Regime"
  FIN_strengten_regime_desc:0 "Democracy is no more in our land; we came out on top of the political struggle! Now it is time to establish the internal policies of Jatkosota once and for all before the red threat attacks first."
  FIN_New_Finland:0 "New Jatkosota"
- FIN_New_Finland_desc:0 ""
+ FIN_New_Finland_desc:0 "A new era has begun and it's time to claim glory in the name of Jatkosota! And the ideas of Mikko will let us achieve this!"
  
  FIN_norm_industry:0 "Moderate Development"
  FIN_norm_industry_desc:0 ""
@@ -1434,7 +1434,7 @@
  FIN_resourses_efforts_desc:0 ""
  
  FIN_germany_alliance:0 "Alliance With Kuromorimine"
- FIN_germany_alliance_desc:0 ""
+ FIN_germany_alliance_desc:0 "Now with our new government, it's time to find some new allies. And there is no better option than Kuromorimine, since they have our same ideology and they oppose the Pravda menace."
  
  FIN_Finnish_fleet:0 "Finnish Fleet"
  FIN_Finnish_fleet_desc:0 "The Finnish Navy is now in a pitiful state and requires major reforms. We should start them before it's too late."
@@ -1464,29 +1464,29 @@
  FIN_develop_sea_bombers_desc:0 "The Baltic sea is located very close to us, and if necessary, our aviation will be able to control it. The development of a special bomber for these purposes can significantly help our fleet."
  
  FIN_join_barbarossa:0 "Join 'Barbarossa'"
- FIN_join_barbarossa_desc:0 ""
+ FIN_join_barbarossa_desc:0 "The time has come! Our allies have started a war against our enemies. It's our time to strike! Glory to Jakosota!"
  FIN_german_military_mission:0 "Kuromorimine Military Mission"
- FIN_german_military_mission_desc:0 ""
+ FIN_german_military_mission_desc:0 "We need the aid of Kuromorimine’s professional army to be ready to stand against the red threat. Therefore, we shall ask for military advisors."
  FIN_german_industry:0 "Kuromorimine Industry"
- FIN_german_industry_desc:0 ""
+ FIN_german_industry_desc:0 "Despite being strong and having great ambition, our industry is too small for the task. Thus, asking for external help would not hurt."
  FIN_german_tactics:0 "Kuromorimine Strategy"
- FIN_german_tactics_desc:0 ""
+ FIN_german_tactics_desc:0 "The way Kuromorimine fights is very different from ours. However, this does not mean that we cannot learn anything from it. So let's adapt some of their strategies in our favor."
  FIN_karelia_line:0 "Line 'Karelia'"
- FIN_karelia_line_desc:0 ""
+ FIN_karelia_line_desc:0 "If we are to survive against the communist threat, we need to protect the most vulnerable."
  FIN_north_line:0 "Line 'North'"
- FIN_north_line_desc:0 ""
+ FIN_north_line_desc:0 "The next step in our fortification plans should be the big northern front so that we are not flanked by the enemy."
  FIN_occupy_alands:0 "Remilitarize Alands"
- FIN_occupy_alands_desc:0 ""
+ FIN_occupy_alands_desc:0 "With our expansion needing a new operation base in the Baltic sea, we will use the Aland island for this."
  FIN_Torne_land_claim:0 "Claim Torne"
- FIN_Torne_land_claim_desc:0 ""
+ FIN_Torne_land_claim_desc:0 "Viggen has a large amount of natural resources and population. We need to stop the spread of communism, so lets first claim some of their territory."
  FIN_provoke_sweden:0 "Provoke Viggen"
- FIN_provoke_sweden_desc:0 ""
+ FIN_provoke_sweden_desc:0 "If we want our claims to take place, we must strike at Viggen and establish our dominance in the region."
  FIN_Finnmark_claim:0 "Claim Finnmark"
- FIN_Finnmark_claim_desc:0 ""
+ FIN_Finnmark_claim_desc:0 "Viking has even more resources and better terrain to defend, so it would be wise to claim that for our great nation."
  FIN_provoke_norway:0 "Provoke Viking Fisheries"
- FIN_provoke_norway_desc:0 ""
+ FIN_provoke_norway_desc:0 "If we want our claims to take place, we must strike at Viking and establish our dominance in the region."
  FIN_east_claims:0 "Eastern Claims"
- FIN_east_claims_desc:0 ""
+ FIN_east_claims_desc:0 "If what we want is a Greater Jatkosota, we have to start considering the territories to our east as rightfully ours!"
  
  FIN_red_reustavration:0 "Red Restoration"
  FIN_red_reustavration_desc:0 ""
@@ -1638,7 +1638,7 @@
  FIN_end_with_the_nazism_desc:0 ""
  
  FIN_integrate_white_guard:0 "Integrate White Guard"
- FIN_integrate_white_guard_desc:0 ""
+ FIN_integrate_white_guard_desc:0 "The White Guard are those brave men that want to fight the reds and the enemies of Jatkosota; however, they have paramilitary restrictions. To address this, we shall integrate them into the army so they can give the best of themselves for Jatkosota."
  FIN_integrate_white_guard_tt:0 "§RWhite Guard will be integrated.§."
 
  FIN_mass_ski_equipment:0 "Mass Ski Production"
