--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1339,41 +1339,41 @@
  FIN_antisoviet_propaganda_desc:0 "If we are to defeat the reds on the battlefield, we first have to defeat them in our homes. There are still some supporters of Pravda’s ideas in our academy, so we should end all of them before the fight."
  
  FIN_eastern_question:0 "Eastern Question"
- FIN_eastern_question_desc:0 ""
+ FIN_eastern_question_desc:0 "Now that the will of the people has been secured we find a new internal threat, the discussion and rivalry of the leftist and social democrats and the center traditionalist democrats, we need to choose between these two to find stability at last."
  FIN_red_menace:0 "Red Menace"
- FIN_red_menace_desc:0 ""
+ FIN_red_menace_desc:0 "We can't trust in Pravda, we need to find support in other parts of the world and prepare if our rivalry comes to a war with them, especially now that they have Katyusha and her radical ideas."
  FIN_germany:0 "Mission to Kuromorimine"
- FIN_germany_desc:0 ""
+ FIN_germany_desc:0 "The enemy of my enemy is my ally, so we need to start improving relations with Kuromorimine if we are to protect ourselves from Pravda."
  FIN_ger_airdroms:0 "Airdrome Network"
- FIN_ger_airdroms_desc:0 ""
+ FIN_ger_airdroms_desc:0 "With our new situation we should be able to expand the aerodromes in our country so in case of a war with pravda our new friends in Kuromorimine could send air support."
  FIN_soviet_compromise:0 "Compromise With The Pravda"
- FIN_soviet_compromise_desc:0 ""
+ FIN_soviet_compromise_desc:0 "To find the true evolution of Jatkosota we need to follow the revolution and now it's up to us to start the dialogue with Pravda and finally end our rivalry."
  FIN_ussr:0 "Mission to The Pravda"
- FIN_ussr_desc:0 ""
+ FIN_ussr_desc:0 "Now that we are no longer enemies it is time to start talking to pravda about a possible not just neutrality but about friendship between us so we better start packing."
  FIN_legalise_communist_party:0 "Legalize Communist Party"
- FIN_legalise_communist_party_desc:0 ""
+ FIN_legalise_communist_party_desc:0 "Now that we are no longer enemies we don't need to be afraid of hiring communist sympathizers in our government and even our high rank POLITICAL CABINET. It's not like they would start a CIVIL WAR or to make a NATIONAL REFERENDUM or coup to try to take all the power, right?"
  FIN_missions_tt:0 "§RThis will allow you to request assistance through this country in the future!§!"
  FIN_english:0 "Mission to St. Gloriana"
- FIN_english_desc:0 ""
+ FIN_english_desc:0 "We can find help from those who have protected freedom in the world and even if they are not as strong as they used to be they can be useful for our cause."
  FIN_france:0 "Mission to BC Freedom"
- FIN_france_desc:0 ""
+ FIN_france_desc:0 "Another option to help us is BC Freedom and despite them also having internal problems they would likely help us against our enemies."
  FIN_swedish:0 "Mission to Viggen"
- FIN_swedish_desc:0 ""
+ FIN_swedish_desc:0 "Our Scandinavian brother should be more than open to help us in case we find ourselves in need."
  FIN_lend_lease:0 "Request Assistance"
- FIN_lend_lease_desc:0 ""
+ FIN_lend_lease_desc:0 "The time has come, we are at war so it's time to use the allies we made in our favor, let's request them to help protect our integrity and independence."
  FIN_foreign_volunteers:0 "Foreign Volunteers"
- FIN_foreign_volunteers_desc:0 ""
+ FIN_foreign_volunteers_desc:0 "Our friends and their soldiers answer our call, some of their forces are coming we can use them to protect the great Jatkosota independence "
  
  FIN_solve_border_problem:0 "Solve Border Problem"
- FIN_solve_border_problem_desc:0 ""
+ FIN_solve_border_problem_desc:0 "Now that we are closer to Pravda, it is time to solve the border disputes with them so we can further improve our relations."
  FIN_protect_sea_borders:0 "Protect Sea Borders"
- FIN_protect_sea_borders_desc:0 ""
+ FIN_protect_sea_borders_desc:0 "Now that the borders with pravda are safe we need to use our resources to improve the cost defense in case of external threats."
  FIN_remilitarise_alands:0 "Remilitarize Aland Islands"
  FIN_remilitarise_alands_desc:0 "Our expansion requires a new operations base in the Baltic sea. We shall use the Aland island for this."
  FIN_protect_alands:0 "Protect Aland Islands"
- FIN_protect_alands_desc:0 ""
+ FIN_protect_alands_desc:0 "With Pravda on our side we will need a bigger and better base in the Baltic sea so it's time to protect and expand our base there."
  FIN_soviet_protection:0 "Pact With the Pravda"
- FIN_soviet_protection_desc:0 ""
+ FIN_soviet_protection_desc:0 "The formation of a pact of defense is the key to get Pravda on our side. If we fail on these we could be doomed to fight with them in the future."
  FIN_learn_soviet_tanks:0 "Studying Pravda Tanks"
  FIN_learn_soviet_tanks_desc:0 ""
  FIN_learn_soviet_strategy:0 "Studying Pravda Strategy"
@@ -1392,7 +1392,7 @@
  FIN_strike_at_lenin_sity:0 "Strike at Katyusha's Sity"
  FIN_strike_at_lenin_sity_desc:0 "The time is now! Pravda is struggling in the fight against their enemies, so it's our chance to shine and end the Soviet threat. Let us attack now before it's too late!"
  FIN_protect_democraty:0 "Protect Democracy"
- FIN_protect_democraty_desc:0 ""
+ FIN_protect_democraty_desc:0 "We can't fall into radical ideas and we must protect democracy and the will of the people no matter who or what stands against us."
  FIN_strengten_regime:0 "Strengthen the Regime"
  FIN_strengten_regime_desc:0 "Democracy is no more in our land; we came out on top of the political struggle! Now it is time to establish the internal policies of Jatkosota once and for all before the red threat attacks first."
  FIN_New_Finland:0 "New Jatkosota"
@@ -1489,17 +1489,17 @@
  FIN_east_claims_desc:0 "If what we want is a Greater Jatkosota, we have to start considering the territories to our east as rightfully ours!"
  
  FIN_red_reustavration:0 "Red Restoration"
- FIN_red_reustavration_desc:0 ""
+ FIN_red_reustavration_desc:0 "Pravda's ideas are victorious and now we are the vanguard that will lead Jatkosota to prosperity so we need to find our way in the heart of the population that continue to see pravda as the enemy and in turn we have to demonstrate our ability to be autonomous as a nation"
  FIN_restore_order:0 "Restore Order"
- FIN_restore_order_desc:0 ""
+ FIN_restore_order_desc:0 "Our new administration needs to guarantee control of all its people, the first step is to deploy the police and calm the population in these times of change."
  FIN_plan_industry:0 "Reorganization of Agriculture"
- FIN_plan_industry_desc:0 ""
+ FIN_plan_industry_desc:0 "The change must reach the farmers on whom everyone's food depends, if we are not capable of reforming our agricultural sector it will not be possible to say that we are the government of the people."
  FIN_social_gueratees:0 "Planned Economy"
- FIN_social_gueratees_desc:0 ""
+ FIN_social_gueratees_desc:0 "Our old capitalist system cannot survive in this new era, which is why a new economy is crucial. With the support of Pravda, our industrialization will be more effective than ever and will support the common worker instead of the evil businessman."
  FIN_economy_restoration:0 "Reconstruction of the Towns"
- FIN_economy_restoration_desc:0 ""
+ FIN_economy_restoration_desc:0 "The people of Jatkosota have gone through a critical moment during the system change and the cities became insufficient for what the population needed. A new era of progress has to be visible in the new Jatkosota, a rebuilding of the broken must begin."
  FIN_independece:0 "Independence"
- FIN_independece_desc:0 ""
+ FIN_independece_desc:0 "A new identity for Jatkosota is visible and it is time to stop being just a school in occupation it is time to proclaim the end of change and the establishment of the Independent Socialist Republic of Jatkosota (ISRJ)"
  
  FIN_flames_of_revolution:0 "Flames of Revolution"
  FIN_flames_of_revolution_desc:0 ""
