--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -338,6 +338,12 @@
  GER_bulwark_against_bolshevism:0 "Bulwark Against Pravdaism"
  GER_bulwark_against_bolshevism_desc:0 "Our academy stands as a shield against Pravdaism, protecting the West from communism's influence. We must carry this mantle with pride, and prepare to use arms if necessary."
  GER_bulwark_against_bolshevism_tt:0 "§RThis National Spirit will be lost if in a faction with, or fighting a war on the same side of, Pravda.§!\n"
+ GER_the_west:0 "Western Approaches"
+ GER_the_west_desc:0 "If we seek to maintain peace with our neighbours we must seek to smooth over tensions with the west and perhaps even seek to ally them, to thwart eastern expansion. And if the west won’t have us we must push forwards by ourselves, to defend ourselves and those around us."
+ GER_negotiate_alliance:0 "The New Triple Entente"
+ GER_negotiate_alliance_desc:0 "We have had many differences with the western colonial powers in the past, but they know as well as us that if we continue to fight one another we will surely all be destroyed. A alliance is needed a triple Entente of sorts, a alliance of BC freedom, St Gloriana, and kuromorimine, a solid power block to oppose the ambitions of Anzio, Saunders and most Importantly Pravda, surely they will come to their senses and agree to our proposal to join."
+ GER_polish_protection:0 "Protect the Boar"
+ GER_polish_protection_desc:0 "Bonple whilst still maintaining control over some traditional lands of our own, are a major eastern guarantee in checking the power of Pravda. Ensuring their territorial integrity is essential to our own security and that of the security of all of Eastern Europe."
  SOV_BULWARK_NAME_COMMUNIST:0 "Bulwark Against Bolshevism"
  SOV_BULWARK_NAME_FASCISM:0 "Fortress Against Fascism"
  SOV_BULWARK_NAME_NEUTRALITY:0 "Redoubt Against Russia"
