--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -344,6 +344,12 @@
  GER_negotiate_alliance_desc:0 "We have had many differences with the western colonial powers in the past, but they know as well as us that if we continue to fight one another we will surely all be destroyed. A alliance is needed a triple Entente of sorts, a alliance of BC freedom, St Gloriana, and kuromorimine, a solid power block to oppose the ambitions of Anzio, Saunders and most Importantly Pravda, surely they will come to their senses and agree to our proposal to join."
  GER_polish_protection:0 "Protect the Boar"
  GER_polish_protection_desc:0 "Bonple whilst still maintaining control over some traditional lands of our own, are a major eastern guarantee in checking the power of Pravda. Ensuring their territorial integrity is essential to our own security and that of the security of all of Eastern Europe."
+ GER_against_pravda:0 "Against Pravda"
+ GER_against_pravda_desc:0 "The one schoool Kuromorimine is becoming increasingly worried about is Pravda and its beligerant leader Kaytusha, Kuromorimine needs to strike first to secure its future where we aren't pushed around."
+ GER_our_own_way:0 "Our Own Way"
+ GER_our_own_way_desc:0 "We can't find any useful alllies outside of Kuromorimine that are willing to help us. It's time we focus on our internal situation and try forging our own path."
+ GER_expand_fortlines:0 "Expand Frontlines"
+ GER_expand_fortlines_desc:0 "The military can only do so much in the face of us being surrounded by so many potential enemies, we must let the military have more control to defend ourselves in any war."
  SOV_BULWARK_NAME_COMMUNIST:0 "Bulwark Against Bolshevism"
  SOV_BULWARK_NAME_FASCISM:0 "Fortress Against Fascism"
  SOV_BULWARK_NAME_NEUTRALITY:0 "Redoubt Against Russia"
