--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -350,6 +350,14 @@
  GER_our_own_way_desc:0 "We can't find any useful alllies outside of Kuromorimine that are willing to help us. It's time we focus on our internal situation and try forging our own path."
  GER_expand_fortlines:0 "Expand Frontlines"
  GER_expand_fortlines_desc:0 "The military can only do so much in the face of us being surrounded by so many potential enemies, we must let the military have more control to defend ourselves in any war."
+ GER_repaired_republic:0 "A Republic Restored."
+ GER_repaired_republic_desc:0 "Many days we’ve worked to undo the harm done to our nation, and today it comes to a end. The reforms have been set in stone the parliament building now open to once again house democratic discussion, we are now ready to tackle Europe’s issues and will stand strong against tyranny."
+ GER_unify_germans:0 "Joining the two Schools"
+ GER_unify_germans_desc:0 "Kuromormine and Ooarai have for many years been deeply linked to one another, both culturally and economically, and while not everyone seeks to see us both unite, doing so would undoubtedly help in ensuring our collective security and prosperity for decades to come, Germans must be united!"
+ GER_sudentenland_ask:0 "The Sudentenland Proposal"
+ GER_sudentenland_ask_desc:0 "Sudetenland much like ooarahi is culturally linked to our Nation, while The old regime sought to conquer all of Gregor we will instead simply ask for the region to be given to us, or at the very least the region given autonomy, we must not spill yet more blood for our land."
+ GER_danzig_for_industry:0 "The Danzig Purchase"
+ GER_danzig_for_industry_desc:0 "Bonople knows that no matter what government or party that comes to our nation, there will still be a inherent desire to have Danzig return to us, and right the previous wrongs. Rather then perusing it through violence we shall instead offer substantial economic rewards and industrial assistance making the transfer of land more attractive to them."
  SOV_BULWARK_NAME_COMMUNIST:0 "Bulwark Against Bolshevism"
  SOV_BULWARK_NAME_FASCISM:0 "Fortress Against Fascism"
  SOV_BULWARK_NAME_NEUTRALITY:0 "Redoubt Against Russia"
