--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -358,6 +358,30 @@
  GER_sudentendland_ask_desc:0 "Sudetenland much like ooarahi is culturally linked to our Nation, while The old regime sought to conquer all of Gregor we will instead simply ask for the region to be given to us, or at the very least the region given autonomy, we must not spill yet more blood for our land."
  GER_danzig_for_industy:0 "The Danzig Purchase"
  GER_danzig_for_industy_desc:0 "Bonople knows that no matter what government or party that comes to our nation, there will still be a inherent desire to have Danzig return to us, and right the previous wrongs. Rather then perusing it through violence we shall instead offer substantial economic rewards and industrial assistance making the transfer of land more attractive to them."
+ GER_invite_benelux:0 "The Low Countries Membership Plan"
+ GER_invite_benelux_desc:0 "The Low Countries have long since been a battleground between the larger  nations, if European peace is to be maintained we must have them within the EU, their economic location will also help with the movement of trade."
+ GER_invite_poland:0 "The Boar and the Eagle"
+ GER_invite_poland_desc:0 "Bonople has been at odds with us for many years, but by offering them a place into the  European Union this is a chance for Poland to step forward into a new era, to join hands with Us and become Partners whilst working together for the greater good of all."
+ GER_invite_france:0 "The Land of Cheese and Wine"
+ GER_invite_france_desc:0 "BC freedom is one of our oldest adversaries, but they have the potentially to be our greatest partners, sure we will undoubtedly have to do some bootkissing but with time they will come around to the idea we are proposing."
+ GER_invite_switzerland:0 "Mountaineer Diplomacy"
+ GER_invite_switzerland_desc:0 "The Swiss are a quite neutral party, and are quite friendly with everyone but their fiercely independent foreign policy could be difficult to convince them to join a European wide organization, our best bet is appealing to the economic benefits to joining, as opposed to its military benefits."
+ GER_invite_baltics:0 "Baltic Membership"
+ GER_invite_baltics_desc:0 " The Baltic States are probably the most likely to accept our offer for the defensive benefits, less so for the economic reasons others may, hopefully they are convinced by our promises of collective security."
+ GER_invite_czech:0 "Our Czech-mate"
+ GER_invite_czech_desc:0 "Gregor is a major industrial power, while no match for our sheer economic output, they are some would say the equal to the Rhine in terms of economic output, having them within the EU would do so much for our fellow EU members, their military industry would also help"
+ GER_invite_iberia:0 "Close but no Cigar"
+ GER_invite_iberia_desc:0 "Iberia is quite poor in terms of the rest of Europe but, they do have the potential for economic strength, and our help could keep their failing colonial empire from entirely collapsing in on itself, the benefits for the two will make this proposition very appealing to the two no doubt"
+ GER_invite_romania:0 "Don't Count them out!"
+ GER_invite_romania_desc:0 "Count sits on the border with Pravda much like most eastern nations, their territorial integrity is a big problem for it so having a garrantee of defending them will go a long way to ensuring that they don’t fall to their neighbours aggressive actions."
+ GER_invite_british_isles:0 "St. Gloriana shall still rule the waves!"
+ GER_invite_british_isles_desc:0 "St Gloriana has always opposed a united Europe, the existence of one threatens them, the way to placate them of course is assuring them a major seat at the table and as the premier naval power in the alliance, ensuring that they don’t feel threatened navally by the other members."
+ GER_invite_balkans:0 "Party in the Balkans"
+ GER_invite_balkans_desc:0 "Known by some as a powder keg conflict between Count, Yogurt, and Kebab, and many other nations, if European peace is to be established a united Balkans must be ensured to prevent further bloodshed in the region."
+ GER_invite_anzio1:0 "Where is Anchovy?!"
+ GER_invite_anzio1_desc:0 "Anzio isn’t the best partner by any stretch of the imagination, being considered by many as a joke when it proclaims itself a European power, while this delusion does go deep, having this nation alongside us would make controlling it far easier and make the chance it decides to invade anyone less likely."
+ GER_invite_northern_gang:0 "The Northern Lights"
+ GER_invite_northern_gang_desc:0 "The Scandinavian countries to our north all have different reasons for why they may not wish to join, Viking and Viggen both have already stable economies and non predatory members surrounding them, the sales pitch to them may be far more different then the others."
  SOV_BULWARK_NAME_COMMUNIST:0 "Bulwark Against Bolshevism"
  SOV_BULWARK_NAME_FASCISM:0 "Fortress Against Fascism"
  SOV_BULWARK_NAME_NEUTRALITY:0 "Redoubt Against Russia"
